@@ -1,18 +1,18 @@
 ## Makefile for Eicq   -*-Makefile-*-
-
+## $Id$
+##
 ## Copyright (C) 2001 Steve Youngs
-
-
+##
 ## This program is free software; you can redistribute it and/or modify
 ## it under the terms of the GNU General Public License as published by
 ## the Free Software Foundation; either version 2 of the License, or
 ## (at your option) any later version.
-
+##
 ## This program is distributed in the hope that it will be useful,
 ## but WITHOUT ANY WARRANTY; without even the implied warranty of
 ## MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 ## GNU General Public License for more details.
-
+##
 ## You should have received a copy of the GNU General Public License
 ## along with this program; if not, write to the Free Software
 ## Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307 USA
@@ -85,8 +85,8 @@ AUTO_PRELOADS = -eval \("setq autoload-package-name \"$(PACKAGE)\""\)
 
 all:: $(BIN) autoloads $(OBJECTS) customloads texinfo
 
-$(BIN): $(BIN).cc
-	$(CC) $(CFLAGS) -o $(BIN) $(BIN).cc
+$(BIN): $(BIN).c
+	$(CC) $(CFLAGS) -o $(BIN) $(BIN).c
 
 bin: $(BIN)
 
